--- a/src/css/base.css
+++ b/src/css/base.css
@@ -40,19 +40,62 @@ main:has(.back-link) {
   text-align: center;
 }
 
-/* Styles for Mobile devices */
-.container {
-  min-width: 320px;
-  max-width: 375px;
-  margin: 0 auto;
-  padding: 0 16px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
-/* Styles for Tablet devices */
-@media only screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ebf8ed;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #3c5e39;
+  border-radius: 4px;
+  border: 1px solid #ebf8ed;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #3c5e39;
+}
+
+/* Styles for Mobile devices */
+.container {
+  min-width: 375px;
+  max-width: 768px;
+  margin: 0 auto;
+  padding: 0 16px;
 }
 
 /* Styles for Desktop devices */
