--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,7 +27,7 @@
                   height="32"
                   aria-label="Логотип"
                 >
-                  <use href="/img/icons.svg#icon-Vector-down"></use>
+                  <use href="/img/icons.svg#dot"></use>
                 </svg>
               </button>
             </li>
@@ -43,7 +43,7 @@
         </div>
         <button class="burger" type="button">
           <svg class="burger-icon" width="20" height="20">
-            <use href="/img/icons.svg#menu"></use>
+            <use href="/img/icons-menu.svg#menu"></use>
           </svg>
         </button>
       </div>
