--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -51,54 +51,74 @@
   </div>
 
   <!-- ===== MOBILE MENU ====== -->
-  <!-- <div class="mobile-menu"></div> -->
-</header>
-
-<!-- 
-  <div class="mobile-menu-logo">
-      <a class="mobile-menu-logo-link" href="./">
-        <svg
-          class="mobile-icon-logo"
-          width="115"
-          height="36"
-          aria-label="Логотип"
-        >
-          <use href="/img/main-logo.svg#main-logo"></use>
-        </svg>
-      </a>
-    </div>
-
-    <nav class="mobile-nav">
-      <div class="mobile-nav-container">
-        <div class="mobile-nav-left">
-          <ul class="mobile-nav-list">
-            <li class="page">
-              <a href="">PAGES </a>
-              <button class="mobile-button" id="page-toggle" type="button">
-                <svg
-                  class="mobile-icon-logo"
-                  width="32"
-                  height="32"
-                  aria-label="Логотип"
-                >
-                  <use href="/img/icons.svg#icon-Vector-down"></use>
-                </svg>
-              </button>
-            </li>
-            <li class="mob-shop"><a href="">SHOP</a></li>
-            <li class="about"><a href="">ABOUT</a></li>
-          </ul>
-        </div>
-        <div class="mobile-nav-right">
-          <ul class="mobile-right-list">
-            <li class="login"><a href="">LOGIN</a></li>
-            <li class="cart"><a href="">CART (0)</a></li>
-          </ul>
-        </div>
-        <button class="mobile-burger" type="button">
-          <svg class="burger-icon" width="20" height="20">
-            <use href="/img/icons.svg#menu"></use>
+  <div class="big-container-open-menu">
+    <div class="mobile-container">
+      <div class="mobile-menu-logo">
+        <a class="mobile-menu-logo-link" href="./">
+          <svg
+            class="mobile-icon-logo"
+            width="115"
+            height="36"
+            aria-label="Логотип"
+          >
+            <use href="/img/main-logo.svg#main-logo"></use>
           </svg>
-        </button>
+        </a>
       </div>
-    </nav> -->
+
+      <nav class="mobile-nav">
+        <div class="mobile-nav-container">
+          <div class="mobile-nav-left">
+            <ul class="mobile-nav-list">
+              <li class="page">
+                <a href="">PAGES </a>
+                <button class="mobile-button" id="page-toggle" type="button">
+                  <svg
+                    class="mobile-icon-logo"
+                    width="32"
+                    height="32"
+                    aria-label="Логотип"
+                  >
+                    <use href="/img/icons.svg#icon-Vector-down"></use>
+                  </svg>
+                </button>
+              </li>
+              <li class="mob-shop"><a href="">SHOP</a></li>
+              <li class="about"><a href="">ABOUT</a></li>
+            </ul>
+          </div>
+          <div class="mobile-nav-right">
+            <ul class="mobile-right-list">
+              <li class="login"><a href="">LOGIN</a></li>
+              <li class="cart"><a href="">CART (0)</a></li>
+            </ul>
+          </div>
+          <button class="mobile-close" type="button">
+            <svg class="mobile-close-icon" width="20" height="20">
+              <use href="/img/icons.svg#close"></use>
+            </svg>
+          </button>
+        </div>
+      </nav>
+    </div>
+    <!-- список в меню посилань -->
+    <div class="second-menu">
+      <ul class="second-menu-list">
+        <li class="second-menu-item">
+          <button id="" class="btn-page-list" type="button">
+            <span>Page</span>
+            <svg class="btn-page-icon" width="20" height="20">
+              <use href="/img/icons.svg#arrow-down"></use>
+            </svg>
+          </button>
+        </li>
+        <li class="second-menu-item"><a href="">Shop</a></li>
+        <li class="second-menu-item"><a href="">About</a></li>
+        <li class="second-menu-item"><a href="">Cart(0)</a></li>
+      </ul>
+    </div>
+    <div class="second-login">
+      <button class="second-login-btn" type="button" id="login">Login</button>
+    </div>
+  </div>
+</header>
