--- a/src/css/base.css
+++ b/src/css/base.css
@@ -11,13 +11,6 @@
     "Segoe UI Emoji", sans-serif;        /* Уніфікуємо рідкі шрифти під основні */
   --font3: "Bodoni Moda", serif;         /* було Cormorant Garamond */
 
-  font-size: 20px;
-  line-height: 1.4;
-  font-weight: 400;
-
-  color: #213721;
-  background-color: rgba(255, 255, 255, 0.87);
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -31,6 +24,14 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  background-color: #f2f6ef;
+
+  font-size: 20px;
+  line-height: 1.4;
+  font-weight: 400;
+  
+  color: #213721;
+  background-color: rgba(255, 255, 255, 0.87);
 }
 
 main {
@@ -72,7 +73,7 @@ img {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-track {
@@ -93,14 +94,13 @@ img {
 /* Styles for Mobile devices */
 .container {
   min-width: 375px;
-  max-width: 768px;
   margin: 0 auto;
   padding: 0 16px;
 }
 
 /* Styles for Desktop devices */
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1440px) {
   .container {
-    max-width: 1200px;
+    min-width: 1440px;
   }
 }
