--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,11 +1,104 @@
 <footer class="footer">
-    <div class="container">
+    <div class="container ft-container">
         <div class="ft-top">
             <a class="footer-logo" href="./">
-                <svg class="footer-icon-logo" aria-label="Логотип">
+                <svg class="footer-icon-logo" width="171" height="54" aria-label="Логотип">
                     <use href="/img/main-logo.svg#main-logo"></use>
                 </svg>
             </a>
+            <div class="opening" aria-label="Opening hours">
+                <h3 class="opening-title">Opening hours</h3>
+                <div class="opening-days">
+                    <p>Monday to Saturday:</p>
+                    <p><time datetime="T10:30">10:30 a.m.</time> to
+                        <time datetime="T19:00">7 p.m.</time>
+                    </p>
+                </div>
+            </div>
         </div>
+        <div class="social" aria-label="Social links">
+            <ul class="social-list">
+                <li class="social-item">
+                    <a class="social-link" href="#" aria-label="Instagram" title="Instagram">
+                        <!-- Instagram SVG -->
+                        <svg class="ft-social-icon" width="32" height="32">
+                            <use href="/img/icons.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="social-item">
+                    <a class="social-link" href="#" aria-label="Twitter" title="Twitter">
+                        <!-- Twitter SVG -->
+                        <svg class="ft-social-icon" width="32" height="32">
+                            <use href="/img/icons.svg#twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+
+                <li class="social-item">
+                    <a class="social-link" href="#" aria-label="Facebook" title="Facebook">
+                        <!-- Facebook SVG -->
+                        <svg class="ft-icon-fb" width="32" height="32">
+                            <use href="/img/icons.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <h3 class="nav-title">Shop</h3>
+        <ul class="nav-list">
+            <li class="ft-nav-item"><a href="#">Skincare</a></li>
+            <li class="ft-nav-item"><a href="#">Facial</a></li>
+            <li class="ft-nav-item"><a href="#">Soap</a></li>
+            <li class="ft-nav-item"><a href="#">Candles</a></li>
+            <li class="ft-nav-item"><a href="#">Auto Fragrances</a></li>
+            <li class="ft-nav-item"><a href="#">Gifts</a></li>
+        </ul>
+    </div>
+    <div class="container">
+        <h3 class="nav-title">Help Desk</h3>
+        <ul class="nav-list">
+            <li class="ft-nav-item"><a href="#">Chat</a></li>
+            <li class="ft-nav-item"><a href="#">FAQ</a></li>
+            <li class="ft-nav-item"><a href="#">Shipping &amp; Returns</a></li>
+            <li class="ft-nav-item"><a href="#">Contact</a></li>
+            <li class="ft-nav-item"><a href="#">Policies</a></li>
+            <li class="ft-nav-item"><a href="#">Accessibility</a></li>
+            <li class="ft-nav-item"><a href="#">My Account</a></li>
+        </ul>
+    </div>
+    <div class="container ft-store">
+        <h3 class="nav-title">Stores</h3>
+        <ul class="nav-list">
+            <li class="ft-nav-item"><a href="#">Manhattan</a></li>
+            <li class="ft-nav-item"><a href="#">Brooklyn</a></li>
+            <li class="ft-nav-item"><a href="#">Tokyo</a></li>
+            <li class="ft-nav-item"><a href="#">Jakarta</a></li>
+            <li class="ft-nav-item"><a href="#">Paris</a></li>
+            <li class="ft-nav-item"><a href="#">Buenos Aires</a></li>
+        </ul>
+    </div>
+
+    <!-- Credits and legal -->
+    <div class="ft-credits">
+        <div class="site-credits">
+            <a class="credits-link" href="#">SITE CREDITS</a>
+            <p class="copyright">©2023 VELVETY</p>
+        </div>
+    </div>
+    <div class="container">
+        <address class="designer" aria-label="Designer and platform">
+            <p>© Designed by <span class="ft-creative">DhuhaCreative</span>. Powered by <span
+                    class="ft-creative">UI8</span>.
+            </p>
+            <ul class="legal-links" aria-label="Legal links">
+                <li><a href="#">Licenses</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+            </ul>
+        </address>
     </div>
 </footer>
