--- a/src/css/base.css
+++ b/src/css/base.css
@@ -101,6 +101,6 @@ img {
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1440px) {
   .container {
-    min-width: 1440px;
+    max-width: 1440px;
   }
 }
