--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -108,9 +108,59 @@
           <button id="" class="btn-page-list" type="button">
             <span>Page</span>
             <svg class="btn-page-icon" width="20" height="20">
-              <use href="/img/icons.svg#arrow-down"></use>
+              <use href="/img/icons.svg#close"></use>
             </svg>
           </button>
+          <ul class="page-submenu">
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Home</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">About</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Twitter</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Product Details</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Cart</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Checkout</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Checkout Paypal</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Blog</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Blog Details</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Order Confirmation</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Licenses</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Changelog</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Contact Us</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">404</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">401</a>
+            </li>
+            <li class="page-submenu-item">
+              <a href="#" class="page-submenu-link">Style Guide</a>
+            </li>
+          </ul>
         </li>
         <li class="second-menu-item"><a href="">Shop</a></li>
         <li class="second-menu-item"><a href="">About</a></li>
