--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,9 +4,11 @@
 
 .ft-container-size {
     min-width: 375px;
+    background-color: #f2f6ef;
 }
 
 .container {
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,6 +17,7 @@
     border-bottom: 1px solid #c8d8c0;
     padding-top: 32px;
     padding-bottom: 32px;
+
 }
 
 .ft-container {
@@ -155,7 +158,7 @@
 
     .container {
         min-width: 360px;
-        padding: 0 0 0 0;
+        padding: unset;
         padding-top: 56px;
         padding-bottom: 40px;
         margin: unset;
@@ -165,6 +168,7 @@
     .ft-container {
         min-width: 322px;
         padding-top: 64px;
+        justify-content: space-between;
     }
 
     .ft-shop {
@@ -183,7 +187,7 @@
         padding: 10px 0px;
         width: 202px;
         height: 37px;
-        right: -80px;
+        right: -75px;
         bottom: 280px;
         border-bottom: unset;
     }
