--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,5 +11,6 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./about.css');
+@import url('./contact.css');
 @import url('./subscribe.css');
 @import url('./footer.css');
