--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,55 +1,57 @@
 <section class="contact-section">
-    <div class="contact-item">
-        <svg class="contact-icon" width="74" height="74" aria-hidden="true">
-            <use href="/img/icons.svg#gift"></use>
-        </svg>
-        <div class="contact-box">
-            <div class="contact-txt">
-                <h3 class="contact-title">Loyalty Program</h3>
-                <p class="contact-subtitle">For Happy Skin</p>
+    <div class="contact-box-size">
+        <div class="contact-item">
+            <svg class="contact-icon" width="74" height="74" aria-hidden="true">
+                <use href="/img/icons.svg#gift"></use>
+            </svg>
+            <div class="contact-box">
+                <div class="contact-txt">
+                    <h3 class="contact-title">Loyalty Program</h3>
+                    <p class="contact-subtitle">For Happy Skin</p>
+                </div>
+                <a href="#" class="contact-link">
+                    Join the program
+                    <svg class="contact-arrow" width="31" height="19" aria-hidden="true">
+                        <use href="/img/icons.svg#arrow-right"></use>
+                    </svg>
+                </a>
             </div>
-            <a href="#" class="contact-link">
-                Join the program
-                <svg class="contact-arrow" width="31" height="19" aria-hidden="true">
-                    <use href="/img/icons.svg#arrow-right"></use>
-                </svg>
-            </a>
         </div>
-    </div>
-    <span class="contact-line"></span>
-    <div class="contact-item">
-        <svg class="contact-icon" width="74" height="74" aria-hidden="true">
-            <use href="/img/icons.svg#feedback"></use>
-        </svg>
-        <div class="contact-box">
-            <div class="contact-txt">
-                <h3 class="contact-title">Organic beauty is shared,</h3>
-                <p class="contact-subtitle">Sponsor those you love!</p>
+        <span class="contact-line"></span>
+        <div class="contact-item">
+            <svg class="contact-icon" width="74" height="74" aria-hidden="true">
+                <use href="/img/icons.svg#feedback"></use>
+            </svg>
+            <div class="contact-box">
+                <div class="contact-txt">
+                    <h3 class="contact-title">Organic beauty is shared,</h3>
+                    <p class="contact-subtitle">Sponsor those you love!</p>
+                </div>
+                <a href="#" class="contact-link">
+                    Refer a Friend
+                    <svg class="contact-arrow" width="31" height="19" aria-hidden="true">
+                        <use href="img/icons.svg#arrow-right"></use>
+                    </svg>
+                </a>
             </div>
-            <a href="#" class="contact-link">
-                Refer a Friend
-                <svg class="contact-arrow" width="31" height="19" aria-hidden="true">
-                    <use href="img/icons.svg#arrow-right"></use>
-                </svg>
-            </a>
         </div>
-    </div>
-    <span class="contact-line"></span>
-    <div class="contact-item">
-        <svg class="contact-icon" width="74" height="74" aria-hidden="true">
-            <use href="/img/icons.svg#beauty-treatment"></use>
-        </svg>
-        <div class="contact-box">
-            <div class="contact-txt">
-                <h3 class="contact-title">Treat yourself to good weather</h3>
-                <p class="contact-subtitle">at Maison Absolution</p>
+        <span class="contact-line"></span>
+        <div class="contact-item">
+            <svg class="contact-icon" width="74" height="74" aria-hidden="true">
+                <use href="/img/icons.svg#beauty-treatment"></use>
+            </svg>
+            <div class="contact-box">
+                <div class="contact-txt">
+                    <h3 class="contact-title">Treat yourself to good weather</h3>
+                    <p class="contact-subtitle">at Maison Absolution</p>
+                </div>
+                <a href="#" class="contact-link">
+                    Try Our Treatments
+                    <svg class="contact-arrow" width="31" height="19" aria-hidden="true">
+                        <use href="img/icons.svg#arrow-right"></use>
+                    </svg>
+                </a>
             </div>
-            <a href="#" class="contact-link">
-                Try Our Treatments
-                <svg class="contact-arrow" width="31" height="19" aria-hidden="true">
-                    <use href="img/icons.svg#arrow-right"></use>
-                </svg>
-            </a>
         </div>
     </div>
 </section>
