--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -240,59 +240,27 @@
                 <use href="/img/icons-menu.svg#icon-Vector-down"></use>
               </svg>
             </button>
-            <ul id="page-submenu" class="page-submenu" hidden>
-              <!-- Left column (top to bottom) -->
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Home</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">About</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Twitter</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Product Details</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Cart</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Checkout</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Checkout Paypal</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Blog</a>
-              </li>
+            <div id="page-submenu" class="page-submenu-container" hidden>
+      <ul class="page-submenu">
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Home</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">About</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Twitter</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Product Details</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Cart</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Checkout</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Checkout Paypal</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Blog</a></li>
 
-              <!-- Right column (top to bottom) -->
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Blog Details</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Order Confirmation</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Licenses</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Changelog</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Contact Us</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">404</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">401</a>
-              </li>
-              <li class="page-submenu-item">
-                <a href="#" class="page-submenu-link">Style Guide</a>
-              </li>
-            </ul>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Blog Details</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Order Confirmation</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Licenses</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Changelog</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Contact Us</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">404</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">401</a></li>
+        <li class="page-submenu-item"><a href="#" class="page-submenu-link">Style Guide</a></li>
+      </ul>
+    </div>
           </li>
           <li class="second-menu-item"><a href="">Shop</a></li>
           <li class="second-menu-item"><a href="">About</a></li>
