--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -151,7 +151,7 @@
                   height="32"
                   aria-label="Логотип"
                 >
-                  <use href="/img/icons.svg#dot"></use>
+                  <use href="/img/icons-menu.svg#icon-Vector-down"></use>
                 </svg>
               </button>
             </li>
