--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -164,6 +164,10 @@
         margin: unset;
         border-bottom: none;
     }
+
+    .ft-top {
+        gap: 52px;
+    }
     
     .ft-container {
         min-width: 322px;
