--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,12 +19,12 @@
         <div class="header-nav-left">
           <ul class="header-nav-list">
             <li class="page">
-              <a href="">PAGES </a>
+              <a class="page-desktop" href="">PAGES </a>
               <button class="header-button" id="page-toggle" type="button">
                 <svg
                   class="header-icon-logo"
-                  width="32"
-                  height="32"
+                  width="20"
+                  height="20"
                   aria-label="Логотип"
                 >
                   <use href="/img/icons-menu.svg#icon-Vector-down"></use>
